--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,111 @@
 @tailwind components;
 @tailwind utilities;
  
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+  }
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.scrollCards::-webkit-scrollbar {
+  display: none;
+}
+
+/* body::before,
+body::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  opacity:0.8
+}
+
+body::before {
+  background: var(--third-glow);
+  border-radius: 50%;
+  width: 50vw;
+  height: 50vw;
+  margin-left: -200px;
+  filter:blur(90px);  
+  top: calc(50vh - 50vw/2);
+  left: calc(50vw );
+}
+
+body::after {
+  background: var(--secondary-glow);
+  border-radius: 50%;
+  width: 500px;
+  height: 700px;
+  filter:blur(90px);
+  top: calc(50vh - 50vw/2);
+  left: calc(50vw - 50vw/2);
+}
+
+@keyframes animateBefore {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(200px) scale(0.8);
+
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes animateAfter{
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-250px) scale(1.2);
+
+  }
+  100% {
+    transform: translateX(0);
+  }
+} */
+
+img {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    /* --secondary-glow: conic-gradient(
+      from 10deg at 50% 50%,
+      #eb7494 0deg,
+      #ae77b2 55deg,
+      #97b5da 120deg,
+      #0099ca 160deg,
+      transparent 360deg
+    );
+  
+    --third-glow: conic-gradient(
+      from 90deg at 50% 50%,
+      #ff8b7e 0deg,
+      #e24e6b 160deg,
+      #7ed2da 120deg,
+      #8bdce0 55deg,
+      transparent 360deg
+    ); */
+
+    --background: 240 60% 99%;
     --foreground: 0 0% 3.9%;
 
     --card: 0 0% 100%;
@@ -13,16 +115,16 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
  
-    --primary: 0 0% 9%;
+    --primary: 271 91% 65%;
     --primary-foreground: 0 0% 98%;
  
-    --secondary: 0 0% 96.1%;
+    --secondary: 243 100% 93%;
     --secondary-foreground: 0 0% 9%;
  
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
  
-    --accent: 0 0% 96.1%;
+    --accent: 242 100% 62%;
     --accent-foreground: 0 0% 9%;
  
     --destructive: 0 84.2% 60.2%;
@@ -36,7 +138,7 @@
   }
  
   .dark {
-    --background: 0 0% 3.9%;
+    --background: 240 60% 1%;
     --foreground: 0 0% 98%;
  
     --card: 0 0% 3.9%;
@@ -45,16 +147,16 @@
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
  
-    --primary: 0 0% 98%;
+    --primary: 271 91% 65%;
     --primary-foreground: 0 0% 9%;
  
-    --secondary: 0 0% 14.9%;
+    --secondary: 243 100% 7%;
     --secondary-foreground: 0 0% 98%;
  
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
  
-    --accent: 0 0% 14.9%;
+    --accent: 242 100% 38%;
     --accent-foreground: 0 0% 98%;
  
     --destructive: 0 62.8% 30.6%;
@@ -74,3 +176,5 @@
     @apply bg-background text-foreground;
   }
 }
+
+
